# src/modules/response_model/response_model.controller.ts
@@ -1,0 +1,30 @@
+/*
+ * @Author: laotianwy 1695657342@qq.com
+ * @Date: 2025-01-25 00:25:07
+ * @LastEditors: laotianwy 1695657342@qq.com
+ * @LastEditTime: 2025-01-25 01:10:01
+ * @FilePath: /mock-api-serve/src/modules/response_model/response_model.controller.ts
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ */
+import { Body, Controller, Post } from '@nestjs/common';
+import { ResponseModelService } from './response_model.service';
+import { ResponseModelDto, UpdateResponseModelDto } from './dto/response-model.dto';
+import { Roles } from 'src/common/decorators/roles.decorator';
+import { Role } from '@prisma/client';
+
+@Controller('responseModel')
+export class ResponseModelController {
+    constructor(private readonly responseModelService: ResponseModelService) {}
+
+    @Post('addProjectModel')
+    @Roles(Role.USER, Role.ADMIN)
+    async addProjectModel(@Body() body: ResponseModelDto) {
+        await this.responseModelService.addProjectModel(body);
+    }
+
+    @Post('updateResponseModelDto')
+    @Roles(Role.USER, Role.ADMIN)
+    async updateResponseModelDto(@Body() updateResponseModelDto: UpdateResponseModelDto) {
+        await this.responseModelService.updateResponseModelDto(updateResponseModelDto);
+    }
+}
